# bakusoku-tangochou-public

./: .gitignore  LICENSE.md  README.md  SCoRE_example.xls - SCoRE Examples.csv  client.bat  config.json  pyproject.toml  server.bat
bakusoku_tangochou/client/: __main__.py  config.json  config.py  menu_graphic.py  play.py  ranking.py  session.py
bakusoku_tangochou/core/: __init__.py  util.py
bakusoku_tangochou/server/: __main__.py  database.py  generate_cert.py  load.py  server.py
